Adding basic python

--- a/Basic.ipynb
+++ b/Basic.ipynb
@@ -2,19 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Amma\n"
+      "kesamma\n"
      ]
     }
    ],
    "source": [
-    "name = \"Amma\"\n",
+    "name = \"kesamma\"\n",
     "print(name)"
    ]
   },
